# InitialCMakeProjectWithQt

./: .projectile  CMakeLists.txt  README.md  Utils.cmake
app/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  config.h.in  main.cpp
lib/: CMakeLists.txt  lib.cpp  lib.h
